# Rubik-Tensor

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  environment.yml  pyproject.toml
.github/workflows/: check.yml  push.yml
notebooks/: dev.ipynb
src/rubik/: __main__.py  action.py  cube.py  display.py  hello.py  moves.py  state.py  tensor_utils.py
src/rubik/interface/: app.py  plot.py
src/rubik/layout/: demo.py  interface.py  plot.py
tests/unit/: test_action.py  test_cube.py  test_display.py  test_state.py  test_tensor_utils.py
