[project]
name = "rubik-tensor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "cupy-cuda12x>=13.4.1",
    "fire>=0.7.0",
    "loguru>=0.7.3",
    "torch>=2.7.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "mypy>=1.16.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.0",
]

[tool.uv]
package = true

[tool.uv.sources]
torch = { index = "torch-cu126" }

[[tool.uv.index]]
name = "torch-cu126"
url = "https://download.pytorch.org/whl/cu126"

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
addopts = "--cov src"
