[project]
name = "rubik-tensor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fire>=0.7.0",
    "gradio>=5.38",
    "loguru>=0.7.3",
    "plotly>=6.2.0",
    "pydantic>=2.11.7",
    "torch>=2.7.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "mypy>=1.16.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.0",
]

[tool.uv]
package = true

[tool.uv.sources]
torch = { index = "torch-cu126" }

[[tool.uv.index]]
name = "torch-cu126"
url = "https://download.pytorch.org/whl/cu126"

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
addopts = "--cov src"
